--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ websockets===15.0.1
 greenlet===3.1.1 
 pymysql===1.1.1 
 sqlalchemy===2.0.40
+langchain===0.3.23
+openai===1.72.0
+langchain_community===0.3.21
