--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,11 @@ langchain===0.3.23
 openai===1.72.0
 langchain_community===0.3.21
 langchain-community===1.0.0
+
+unstructured
+tiktoken===0.9.0
+pinecone-client
+pypdf
+pandas 
+numpy
+pinecone===6.0.2
