--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,9 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+; sqlalchemy.url = driver://user:pass@localhost/dbname
+; sqlalchemy.url = mysql+pymysql://root:@localhost:3306/yashmind-ai
+sqlalchemy.url = mysql+pymysql://root@localhost:3306/yashmind-ai
 
 
 [post_write_hooks]
