--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,16 @@ pdfminer.six
 numpy==2.2.4
 twilio==9.6.0
 slack_sdk==3.35.0
+PyJWT==2.9.0 
+amqp==5.3.1 
+billiard==4.2.1 
+celery==5.5.2 
+click-didyoumean==0.3.1 
+click-plugins==1.1.1 
+click-repl==0.3.0 
+kombu==5.5.3 
+prompt-toolkit==3.0.51 
+redis==5.3.0 
+tzdata==2025.2 
+vine==5.1.0 
+wcwidth==0.2.13
