--- a/alembic.ini
+++ b/alembic.ini
@@ -65,7 +65,7 @@ version_path_separator = os
 
 ; sqlalchemy.url = driver://user:pass@localhost/dbname
 ; sqlalchemy.url = mysql+pymysql://root:@localhost:3306/yashmind-ai
-sqlalchemy.url = mysql+pymysql://root@localhost:3306/yashmind-ai
+sqlalchemy.url = mysql+pymysql://root:root@localhost:3306/yashmind_ai
 
 
 [post_write_hooks]
